chore: added links to games

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
  
             <li class="proyect">
                 
-                <a class="caja sombra" href="hastalasmuelas/">
+                <a class="caja sombra" href="https://marucomass.github.io/hastaLasMuelas/">
                     <div class="manija auto"></div>
                     <img class="auto" src="hastalasmuelas/icon.png" alt="Hasta Las Muelas">  
                 </a> 
@@ -112,7 +112,7 @@
 
            <li class="proyect">
                 
-            <a class="caja sombra" href="tiratiro/">
+            <a class="caja sombra" href="https://marucomass.github.io/tiratiro/">
                 <div class="manija auto"></div>
                 <img class="auto" src="tiratiro/fav.png" alt="Tira Tiro">  
             </a> 
@@ -128,7 +128,7 @@
         <hr> <!--  ####### separador ####### -->
 
         <li class="proyect">
-            <a class="caja sombra" href="caidalibre/">
+            <a class="caja sombra" href="https://marucomass.github.io/caidaLibre/">
                 <div class="manija auto"></div>
                 <img class="auto" src="caidalibre/fav.png" alt="Caida Libre">  
             </a> 
